# glaxnimate

./: .flatpak-manifest.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .travis.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.md  glaxnimate-android.pro
data/: CMakeLists.txt  glaxnimate.in.desktop
data/emoji/: sets.json
data/logo/: logo.rawr
data/palettes/: RAL Classic.gpl  RAL Design.gpl  Web.gpl
data/plugins/AnimatedRaster/: animated_raster.py  plugin.json
data/plugins/FrameByFrame/: create_frames.py  create_frames.ui  plugin.json
data/plugins/Hello/: hello_world.py  plugin.json
data/plugins/HueShift/: hue_shift.py  plugin.json
data/plugins/ReplaceColor/: plugin.json  replace.ui  replace_color.py
data/plugins/Synfig/: plugin.json  synfig.py
data/plugins/dotLottie/: dotlottie.py  plugin.json
data/templates/: Discord_Sticker.rawr  FHD_30.rawr  PAL.rawr  Telegram_Sticker_30.rawr  Telegram_Sticker_60.rawr
data/themes/: dark.ini  light.ini
data/translations/: auto_en.py  glaxnimate_de.ts  glaxnimate_en.ts  glaxnimate_en_GB.ts  glaxnimate_en_US.ts  glaxnimate_es.ts  glaxnimate_fr.ts  glaxnimate_id.ts  glaxnimate_it.ts  glaxnimate_ru.ts  glaxnimate_zh_CN.ts
py_module/: CMakeLists.txt  MANIFEST.in.in  README.md  module.cpp  setup.in.py
src/: CMakeLists.txt  app_info.cpp  app_info.hpp  glaxnimate_app.cpp  glaxnimate_app.hpp  main.cpp  python.cpp
src/android/: CMakeLists.txt  android.pro  android_file_picker.cpp  android_file_picker.hpp  android_intent_handler.cpp  android_intent_handler.hpp  android_mime.hpp  android_style.cpp  android_style.hpp  base_dialog.cpp  base_dialog.hpp  better_toolbox_widget.cpp  better_toolbox_widget.hpp  document_opener.cpp  document_opener.hpp  emoji_data.cpp  emoji_data.hpp  emoji_widget.cpp  emoji_widget.hpp  format_selection_dialog.cpp  format_selection_dialog.hpp  glaxnimate_app_android.cpp  glaxnimate_app_android.hpp  help_dialog.cpp  help_dialog.hpp  main.cpp  main_window.cpp  main_window.hpp  main_window.ui  resources.qrc  scroll_area_event_filter.cpp  scroll_area_event_filter.hpp  setup_env.sh  sticker_pack_builder_dialog.cpp  sticker_pack_builder_dialog.hpp  sticker_pack_builder_dialog.ui  telegram_intent.cpp  telegram_intent.hpp  timeline_slider.cpp  timeline_slider.hpp
src/android/android/: AndroidManifest.xml  AndroidManifest.xml.in  _AndroidManifest.xml  build.gradle  version.gradle.in
src/android/tools/: cmake_helper.py  copy_emoji_flags.py  update_emoji.py
src/app/: app_info.cpp  app_info.hpp  application.cpp  application_info_generated.in.hpp  translation_service.cpp  translation_service.hpp
src/app/settings/: setting_group.hpp  settings.cpp  settings.hpp  settings_list.cpp  widget_builder.hpp
src/command/: animation_commands.hpp  base.hpp  layer_commands.hpp  property_commands.hpp
src/core/: CMakeLists.txt  app_info.cpp  app_info.hpp  application_info_generated.in.hpp  core.pro  python.cpp
src/core/command/: animation_commands.cpp  animation_commands.hpp  base.hpp  layer_commands.hpp  object_list_commands.hpp  property_commands.hpp  shape_commands.cpp  shape_commands.hpp  structure_commands.cpp  structure_commands.hpp  undo_macro_guard.hpp
src/core/io/: animated_properties.hpp  base.cpp  base.hpp  binary_stream.cpp  binary_stream.hpp  binary_types.hpp  io_registry.hpp  json.cpp  json.hpp  options.hpp  utils.cpp  utils.hpp
src/core/math/: bezier.cpp  bezier.hpp  bezier_point.cpp  bezier_point.hpp  bezier_simplify.cpp  bezier_simplify.hpp  bezier_solver.hpp  ellipse_solver.cpp  ellipse_solver.hpp  functions.hpp  geom.cpp  geom.hpp  math.hpp  misc.hpp  polynomial.cpp  polynomial.hpp  vector.hpp  voronoi.cpp  voronoi.hpp
src/core/model/: animation_container.cpp  animation_container.hpp  comp_graph.cpp  comp_graph.hpp  composition.cpp  composition.hpp  custom_font.cpp  custom_font.hpp  document.cpp  document.hpp  document_node.cpp  document_node.hpp  factory.cpp  factory.hpp  invoke.hpp  main_composition.cpp  main_composition.hpp  mask_settings.cpp  mask_settings.hpp  object.cpp  object.hpp  property.hpp  reference_target.cpp  reference_target.hpp  simple_visitor.hpp  stretchable_time.cpp  stretchable_time.hpp  transform.cpp  transform.hpp  undo_macro_guard.hpp  visitor.cpp  visitor.hpp
src/core/plugin/: action.cpp  action.hpp  executor.hpp  io.cpp  io.hpp  plugin.cpp  plugin.hpp  service.hpp  snippet.hpp
src/core/python/: embed.cpp  miscdefs.cpp  miscdefs.hpp  python.cpp  python_module.hpp  winweird.cpp
src/core/rendering/: inkscape_svg.cpp  inkscape_svg.hpp
src/core/trace/: color.cpp  color.hpp  gradient.cpp  gradient.hpp  quantize.cpp  quantize.hpp  segmentation.cpp  segmentation.hpp  trace.cpp  trace.hpp  (+2 more)
src/glaxnimate/: CMakeLists.txt
src/gui/: CMakeLists.txt  cli.cpp  cli.hpp  glaxnimate_app.cpp  glaxnimate_app.hpp  gui.pro  gui_python.cpp  main.cpp
src/io/: base.cpp  base.hpp  exporter.hpp  options.hpp  saved_io_options.hpp
src/math/: bezier.hpp  bezier_point.hpp  bezier_solver.hpp  ellipse_solver.hpp  math.hpp  vector.hpp
src/model/: animation.cpp  animation.hpp  composition.cpp  composition.hpp  document.cpp  document.hpp  document_node.cpp  document_node.hpp  factory.cpp  factory.hpp  layers.cpp  layers.hpp  main_composition.hpp  object.cpp  object.hpp  property.hpp  shape.cpp  shape.hpp  transform.cpp  transform.hpp
src/python/: CMakeLists.txt  README.md  embed.cpp  miscdefs.cpp  miscdefs.hpp  module.cpp  python.cpp  python_module.hpp  setup.in.py
src/scripting/: plugin.cpp  plugin.hpp  plugin_settings_group.hpp  script_engine.hpp
src/tools/: base.cpp  base.hpp  dummy.cpp  ellipse.cpp  rectangle.cpp  rectangle.hpp  select.cpp
test/: CMakeLists.txt  benchmark_trace.cpp  bezier_test.hpp  print_vec.hpp  test_aep_gradient_xml.cpp  test_bezier_length.cpp  test_bezier_solver.cpp  test_cluster_merge.cpp  test_cos_parser.cpp  test_keyframe_transition.cpp  test_math_vector.cpp  test_property.cpp  test_riff.cpp  test_segmentation.cpp  test_trace.cpp  test_trace.hpp  test_trace_gradient.cpp  test_trim_path.cpp
(+1213 files in other folders)
